# RivetVM

./: .gitmodules  Cargo.toml  README.md  txt
lang/: Cargo.toml
lang/src/: ctx.rs  lib.rs  tests.rs  utils.rs
lang/src/constraints/: add.rs  and.rs  ashr.rs  assign.rs  atomic_cmp_xchg.rs  atomic_rmw.rs  branch.rs  call.rs  call_stack.rs  callbr.rs  catch_pad.rs  catch_ret.rs  catch_switch.rs  cleanup_pad.rs  cleanup_ret.rs  conditional_branch.rs  fadd.rs  fcmp.rs  fdiv.rs  fmul.rs  fneg.rs  fpext.rs  fptosi.rs  fptoui.rs  fptrunc.rs  frem.rs  fsub.rs  get_elem_ptr.rs  icmp.rs  indirect_br.rs  invoke.rs  landing_pad.rs  mod.rs  mul.rs  or.rs  phi.rs  resume.rs  ret.rs  return_address.rs  sdiv.rs  (+14 more)
starks-v2/: Cargo.toml  build.rs
starks-v2/app/: Cargo.toml  build.rs
starks-v2/app/src/: lib.rs  tests.rs
starks-v2/app/src/llvm/air/: mod.rs  types.rs
starks-v2/app/src/vm/: hello.ll  mod copy.rs  mod.rs  ssa_map.json  witness.rs
starks-v2/app/tests/: vm_cases.rs
starks-v2/r2vm/: Cargo.toml  LICENSE-APACHE  README.md  memory_trace.json  other_cols.json  trace.json
starks-v2/r2vm/.cargo/: config.toml
starks-v2/r2vm/lib/fdt/src/: lib.rs  prop_value.rs
starks-v2/r2vm/lib/fiber/benches/: mutex.rs  rwlock.rs
starks-v2/r2vm/lib/fiber/src/: fiber.s  lib.rs  (+4 more)
starks-v2/r2vm/src/: config.rs  main.rs  ssa_hook.rs  trace.rs
starks-v2/r2vm/src/emu/: abi.rs  dbt.rs  event.rs  interp.rs  loader.rs  mod.rs  signal.rs  syscall.rs
starks-v2/r2vm/src/sim/: mod.rs
starks-v2/r2vm/src/util/: mod.rs
starks-v2/r2vm_cases/arithmetic/: arithmetic.ll  arithmetic.riscv  memory_trace.json  other_cols.json  range_proofs.json  ssa_map.json  trace.json
starks-v2/r2vm_cases/control/: control.ll  control.riscv  memory_trace.json  other_cols.json  range_proofs.json  ssa_map.json  trace.json
starks-v2/r2vm_cases/hello/: hello.ll  hello.riscv  memory_trace.json  other_cols.json  range_proofs.json  ssa_map.json  trace.json
starks-v2/r2vm_cases/memory/: memory.ll  memory.riscv  memory_trace.json  other_cols.json  range_proofs.json  ssa_map.json  trace.json
starks-v2/r2vm_cases/recursive/: memory_trace.json  other_cols.json  range_proofs.json  recursive.ll  recursive.riscv  ssa_map.json  trace.json
starks-v2/src/: lib.rs  merkletree.rs  tests.rs
starks-v2/src/llvm/air/: types.rs  utils.rs
(+88 files in other folders)
