[package]
name = "starks-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = {workspace = true}
lang = { path = "../lang" }

[dev-dependencies]
# Add any development-time dependencies here, if needed
# For example, if you use a specific test runner or benchmark tool

# Example of adding a specific version of a crate for dev only
# criterion = "0.3"