[package]
name = "app"
version = "0.1.0"
edition = "2021"

[features]
gpu = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = {workspace = true}
lang = { path = "../../lang" }


[dev-dependencies]
# Add any development-time dependencies here, if needed
# For example, if you use a specific test runner or benchmark tool

# Example of adding a specific version of a crate for dev only
# criterion = "0.3"

[build-dependencies]
cc = "1.0.91"